<resources>
    <string name="app_name">Quize_app</string>

    <string name="question_1">1. How do we extend a class</string>
    <string name="question_2">2. What is the value of b?.length if b is null </string>

    <string name="option_1_a">extends [classname]</string>
    <string name="option_1_b">:[classname]</string>
    <string name="option_1_c">implements classname</string>

    <string name="option_2_a">throws exception</string>
    <string name="option_2_b">0</string>
    <string name="option_2_c">null</string>

    <string name="reset">reset</string>
    <string name="title">MDP QUIZ</string>
    <string name="submit">Submit</string>

</resources>