<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:ignore="UselessParent"
    tools:context="MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="30sp" />
    <LinearLayout
        android:layout_below="@id/title"
        android:id="@+id/top"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="18sp"
            android:id="@+id/question_num_one"
            android:text="@string/question_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioGroup
                android:id="@+id/radio1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/radio1A"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:text="@string/option_1_a"
                    android:layout_height="wrap_content"
                    android:onClick="answer"/>
                <RadioButton
                    android:id="@+id/radio1B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/option_1_b"
                    android:onClick="answer"/>
                <RadioButton
                    android:id="@+id/radio1C"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/option_1_c"
                    android:layout_height="wrap_content"
                    android:onClick="answer"/>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/top"
        android:id="@+id/LinearLayout"
        android:layout_marginTop="20sp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="18sp"
            android:id="@+id/TextView2"
            android:text="@string/question_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioGroup
                android:id="@+id/radio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/radio2A"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:text="@string/option_2_a"
                    android:layout_height="wrap_content"
                    android:onClick="answer"/>
                <RadioButton
                    android:id="@+id/radio2B"
                    android:text="@string/option_2_b"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="answer"/>
                <RadioButton
                    android:id="@+id/radio2C"
                    android:text="@string/option_2_c"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:onClick="answer"/>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/LinearLayout2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:text="@string/reset" />

        <Button
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:text="@string/submit" />
    </LinearLayout>

</RelativeLayout>